Specify and implement scheduler claim semantics.
Claims describe vehicles' planned future resource allocations. Claim
semantics allow custom scheduling strategies (i.e. scheduler modules) to
take these future allocations into account. (To support this, a
VehicleController is now given the whole TransportOrder assigned to the
vehicle, not just the current DriveOrder.)

Co-authored-by: Martin Grzenia <martin.grzenia@iml.fraunhofer.de>